# nasembler

./: Cargo.toml  LICENSE.md  OPCODES.txt  README.md  build.sh  hello  hello.asm  test  test.asm  test2.asm  test_errors  test_errors.asm  vgcore.10044  vgcore.8988
Infos_MD/: ARCHITECTURE.md  ASSEMBLER_PIPELINE.md  CLI_REFERENCE.md  DEBUGGING_GUIDE.md  DOCUMENTATION.md  EXAMPLES.md  INSTRUCTION_REFERENCE.md  PIPELINE_DIAGRAM.md  SOURCE_CODE_WALKTHROUGH.md  SYNTAX_REFERENCE.md  X86_64.md  X86_64_ASSEMBLY_GUIDE.md  opcodes.md
src/: elf.rs  error.rs  error.rs.bak  main.rs  tokenizer.rs
src/encoder/: mod.rs
src/parser/: ast.rs  directive.rs  instruction.rs  instruction.rs.bak  label.rs  mod.rs  opcodes.rs  section.rs
