[package]
name = "nasembler"
version = "0.1.0"
edition = "2021"

[dependencies]
once_cell = "1.18.0"
clap = { version = "4.4.10", features = ["derive"] }
colored = "2.0.4"

[profile.release]
# Extreme optimization settings
opt-level = 3                # Maximum optimization
lto = "fat"                  # Link-time optimization (more aggressive)
codegen-units = 1            # Slower compilation, but better optimization
panic = "abort"              # Removes panic unwinding code
strip = true                 # Strip symbols from binary
debug = false                # No debug info
overflow-checks = false      # Disable integer overflow checks
rpath = false                # Don't embed library search paths
